[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uuid-kit"
version = "2.0.1"
description = "Generate UUID values (v4, v7) with flexible formatting, prefixes, suffixes, and output shape options."
readme = "README.md"
authors = [
  { name = "Troy Tessalone" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["uuid6>=2024.7.10"]

keywords = [
  "uuid",
  "uuidv4",
  "uuidv7",
  "generator",
  "utility",
  "formatting",
  "transform",
  "output"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/troytessalone/uuid-kit"
Issues = "https://github.com/troytessalone/uuid-kit/issues"

[tool.setuptools.package-data]
uuid_kit = ["py.typed"]